[project]
name = "experiment"
version = "0.1.0"
description = "EDF and Provenance Store"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "chromadb>=0.6.3",
    "flake8>=7.1.2",
    "graphviz>=0.20.3",
    "kaggle>=1.6.17",
    "kagglehub>=0.3.10",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.41",
    "langchain-openai>=0.3.7",
    "numpy>=2.2.3",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "langchain>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langsmith>=0.3.11",
    "langgraph>=0.3.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.9",
]

[tool.black]
line-length = 100
